# Monkey-Typer

./: .gitignore  AudioManager.cpp  AudioManager.h  CMakeLists.txt  Game.cpp  Game.h  IGameState.h  README.md  ResourceManager.cpp  ResourceManager.h  ScoreManager.cpp  ScoreManager.h  Word.cpp  Word.h  WordGenerator.cpp  WordGenerator.h  main.cpp
Config/: 1000words.txt  saveGame.txt  windowConfig.txt
states/: FontSelectState.cpp  FontSelectState.h  GameOverState.cpp  GameOverState.h  MenuState.cpp  MenuState.h  PlayingState.cpp  PlayingState.h
